[gd_scene load_steps=25 format=2]

[ext_resource path="res://player_model.tscn" type="PackedScene" id=1]
[ext_resource path="res://Customizer.gd" type="Script" id=2]
[ext_resource path="res://Scooter.tscn" type="PackedScene" id=3]
[ext_resource path="res://materials/Turquoise Material.material" type="Material" id=4]
[ext_resource path="res://UI/buttonOkTheme.tres" type="Theme" id=6]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=8]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.247059, 0.247059, 0.247059, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 15, 5, 2 )

[sub_resource type="ProceduralSky" id=3]
sky_top_color = Color( 1, 1, 1, 1 )
sky_horizon_color = Color( 0.894118, 0.364706, 0.239216, 1 )

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
background_color = Color( 0.572549, 0.572549, 0.572549, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.152941, 0.219608, 0.596078, 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/commando.ttf"

[sub_resource type="DynamicFont" id=7]
size = 28
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 15
font_data = SubResource( 6 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="Theme" id=10]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = ExtResource( 8 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 9 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id=11]

[sub_resource type="DynamicFontData" id=12]
font_path = "res://fonts/commando.ttf"

[sub_resource type="DynamicFont" id=13]
size = 28
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 6
font_data = SubResource( 12 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 13 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 11 )
Button/styles/normal = SubResource( 11 )
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 0.513726, 0, 1 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 13 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 15 )
Button/styles/normal = SubResource( 15 )
Button/styles/pressed = null

[sub_resource type="Animation" id=17]
resource_name = "zoomIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.19834, -5.23934 ), Vector3( 0, 1.19834, -3.23934 ) ]
}

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.19834, -3.23934 ), Vector3( 0, 1.198, -5.239 ) ]
}

[node name="Customizer" type="Spatial"]
script = ExtResource( 2 )

[node name="player_model_root" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0059893, 0, 0.000235081 )

[node name="Skeleton" parent="player_model_root/player_model/Armature" index="0"]
bones/2/bound_children = [ NodePath("BoneAttachment 6"), NodePath("BoneAttachment 7"), NodePath("BoneAttachment 8"), NodePath("BoneAttachment 9"), NodePath("BoneAttachment 10") ]
bones/4/bound_children = [ NodePath("BoneAttachment") ]
bones/6/bound_children = [ NodePath("BoneAttachment 3") ]
bones/7/bound_children = [ NodePath("BoneAttachment 2") ]
bones/24/bound_children = [ NodePath("BoneAttachment 5") ]
bones/25/bound_children = [ NodePath("BoneAttachment 4") ]
bones/41/bound_children = [ NodePath("BoneAttachment 12"), NodePath("BoneAttachment 13") ]
bones/42/bound_children = [ NodePath("BoneAttachment 11") ]
bones/45/bound_children = [ NodePath("BoneAttachment 15"), NodePath("BoneAttachment 16") ]
bones/46/bound_children = [ NodePath("BoneAttachment 14") ]

[node name="BoneAttachment" parent="player_model_root/player_model/Armature/Skeleton" index="0"]
transform = Transform( 0.999825, -0.0171388, 0.00756878, 0.0187268, 0.901719, -0.431916, 0.000577629, 0.431982, 0.901882, -0.013317, 1.71759, 0.159799 )

[node name="Cube002" parent="player_model_root/player_model/Armature/Skeleton/BoneAttachment" index="0"]
material/0 = ExtResource( 4 )

[node name="BoneAttachment 2" parent="player_model_root/player_model/Armature/Skeleton" index="1"]
transform = Transform( -0.347477, -0.207652, 0.914407, 0.902533, 0.190452, 0.386215, -0.254349, 0.959483, 0.121235, 0.362377, 1.49463, 0.414386 )

[node name="BoneAttachment 3" parent="player_model_root/player_model/Armature/Skeleton" index="2"]
transform = Transform( -0.0710609, 0.444771, -0.892821, -0.943084, -0.321484, -0.0850903, -0.324874, 0.835959, 0.442301, 0.208039, 1.60619, 0.124304 )

[node name="BoneAttachment 4" parent="player_model_root/player_model/Armature/Skeleton" index="3"]
transform = Transform( -0.395048, 0.159864, -0.904644, -0.889264, 0.18057, 0.420242, 0.230533, 0.970483, 0.0708272, -0.397453, 1.49758, 0.411096 )

[node name="BoneAttachment 5" parent="player_model_root/player_model/Armature/Skeleton" index="4"]
transform = Transform( -0.043583, -0.481687, 0.875259, 0.950671, -0.289319, -0.111885, 0.307122, 0.827208, 0.470535, -0.230305, 1.59798, 0.124051 )

[node name="BoneAttachment 6" parent="player_model_root/player_model/Armature/Skeleton" index="5"]
transform = Transform( 0.999825, -0.0185274, 0.00278626, 0.0187268, 0.983652, -0.179101, 0.000577568, 0.179122, 0.983827, -0.00707334, 1.38631, 0.0929616 )

[node name="BoneAttachment 7" parent="player_model_root/player_model/Armature/Skeleton" index="6"]
transform = Transform( 0.999825, -0.0185274, 0.00278626, 0.0187268, 0.983652, -0.179101, 0.000577568, 0.179122, 0.983827, -0.00707334, 1.38631, 0.0929616 )

[node name="Plane012" parent="player_model_root/player_model/Armature/Skeleton/BoneAttachment 7" index="0"]
material/0 = ExtResource( 4 )

[node name="BoneAttachment 8" parent="player_model_root/player_model/Armature/Skeleton" index="7"]
transform = Transform( 0.999825, -0.0185274, 0.00278626, 0.0187268, 0.983652, -0.179101, 0.000577568, 0.179122, 0.983827, -0.00707334, 1.38631, 0.0929616 )

[node name="Plane017" parent="player_model_root/player_model/Armature/Skeleton/BoneAttachment 8" index="0"]
material/0 = ExtResource( 4 )

[node name="BoneAttachment 9" parent="player_model_root/player_model/Armature/Skeleton" index="8"]
transform = Transform( 0.999825, -0.0185274, 0.00278626, 0.0187268, 0.983652, -0.179101, 0.000577568, 0.179122, 0.983827, -0.00707334, 1.38631, 0.0929616 )

[node name="Plane018" parent="player_model_root/player_model/Armature/Skeleton/BoneAttachment 9" index="0"]
transform = Transform( -1.01234, -7.45058e-09, 1.50525e-07, 1.70985e-09, 1.01033, 0.0637361, -1.50234e-07, 0.0637362, -1.01033, -9.4343e-05, 0.108376, 0.0270635 )
material/0 = ExtResource( 4 )

[node name="BoneAttachment 10" parent="player_model_root/player_model/Armature/Skeleton" index="9"]
transform = Transform( 0.999825, -0.0185274, 0.00278626, 0.0187268, 0.983652, -0.179101, 0.000577568, 0.179122, 0.983827, -0.00707334, 1.38631, 0.0929616 )

[node name="Plane019" parent="player_model_root/player_model/Armature/Skeleton/BoneAttachment 10" index="0"]
material/0 = ExtResource( 4 )

[node name="BoneAttachment 11" parent="player_model_root/player_model/Armature/Skeleton" index="10"]
transform = Transform( -0.818496, -0.0444631, 0.572866, -0.350282, -0.751686, -0.558818, 0.45548, -0.657997, 0.599659, 0.282966, 0.887432, 0.308968 )

[node name="BoneAttachment 12" parent="player_model_root/player_model/Armature/Skeleton" index="11"]
transform = Transform( -0.868411, 0.486134, 0.0979656, -0.127459, -0.409687, 0.903288, 0.479273, 0.77189, 0.41773, 0.0740331, 1.06351, -0.0227775 )

[node name="BoneAttachment 13" parent="player_model_root/player_model/Armature/Skeleton" index="12"]
transform = Transform( -0.868411, 0.486134, 0.0979656, -0.127459, -0.409687, 0.903288, 0.479273, 0.77189, 0.41773, 0.0740331, 1.06351, -0.0227775 )

[node name="BoneAttachment 14" parent="player_model_root/player_model/Armature/Skeleton" index="13"]
transform = Transform( -0.817341, 0.0220525, -0.575804, 0.362463, -0.757125, -0.543498, -0.44796, -0.652872, 0.61082, -0.298478, 0.896851, 0.306261 )

[node name="BoneAttachment 15" parent="player_model_root/player_model/Armature/Skeleton" index="14"]
transform = Transform( -0.855367, -0.517881, -0.0142462, 0.215871, -0.381237, 0.898933, -0.47099, 0.765792, 0.437885, -0.0759013, 1.0607, -0.0228641 )

[node name="BoneAttachment 16" parent="player_model_root/player_model/Armature/Skeleton" index="15"]
transform = Transform( -0.855367, -0.517881, -0.0142462, 0.215871, -0.381237, 0.898933, -0.47099, 0.765792, 0.437885, -0.0759013, 1.0607, -0.0228641 )

[node name="Coat" parent="player_model_root/player_model/Armature/Skeleton" index="19"]
material/0 = null

[node name="Scooter" parent="player_model_root" instance=ExtResource( 3 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30326, 3 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -2.31648, -0.229979 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.486877, 0 )
use_collision = true
radius = 2.30915
height = 0.395526
sides = 16

[node name="CSGCylinder2" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.311091, 0 )
use_collision = true
radius = 1.83495
height = 0.395526
sides = 16

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.19834, -5.23934 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -336.0
margin_top = -349.0
margin_right = -14.0
margin_bottom = 974.0
rect_scale = Vector2( 1, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_right = 322.0
margin_bottom = 1323.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 315.0
margin_bottom = 1316.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 308.0
margin_bottom = 424.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer2"]
margin_right = 308.0
margin_bottom = 424.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 428.0
margin_right = 308.0
margin_bottom = 432.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="Helmet&Vest" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 308.0
margin_bottom = 520.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HVColorPickerButton" type="ColorPickerButton" parent="MarginContainer/PanelContainer/VBoxContainer/Helmet&Vest"]
margin_right = 308.0
margin_bottom = 84.0
mouse_default_cursor_shape = 2
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H&VButtons" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 524.0
margin_right = 308.0
margin_bottom = 608.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="H&V Save" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/H&VButtons"]
margin_right = 152.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Save"

[node name="H&V Default" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/H&VButtons"]
margin_left = 156.0
margin_right = 308.0
margin_bottom = 84.0
size_flags_horizontal = 3
theme = SubResource( 8 )
text = "Default"

[node name="Cancel" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/H&VButtons"]
visible = false
margin_left = 208.0
margin_right = 308.0
margin_bottom = 43.0
size_flags_horizontal = 3
theme = SubResource( 10 )
text = "Cancel"

[node name="Plating and armor" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 612.0
margin_right = 308.0
margin_bottom = 696.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PAColorPickerButton" type="ColorPickerButton" parent="MarginContainer/PanelContainer/VBoxContainer/Plating and armor"]
margin_right = 308.0
margin_bottom = 84.0
mouse_default_cursor_shape = 2
color = Color( 1, 1, 1, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaButtons" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 700.0
margin_right = 308.0
margin_bottom = 784.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="PA Save" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/PaButtons"]
margin_right = 152.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Save"

[node name="PA Default" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/PaButtons"]
margin_left = 156.0
margin_right = 308.0
margin_bottom = 84.0
size_flags_horizontal = 3
theme = SubResource( 8 )
text = "Default"

[node name="PA Cancel" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/PaButtons"]
visible = false
margin_left = 208.0
margin_right = 308.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = SubResource( 10 )
text = "Cancel"

[node name="Shirt" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 788.0
margin_right = 308.0
margin_bottom = 872.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShirtColorPickerButton" type="ColorPickerButton" parent="MarginContainer/PanelContainer/VBoxContainer/Shirt"]
margin_right = 308.0
margin_bottom = 84.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
color = Color( 1, 1, 1, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShirtButtons" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 876.0
margin_right = 308.0
margin_bottom = 960.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Save" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/ShirtButtons"]
margin_right = 152.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Save"

[node name="Default" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/ShirtButtons"]
margin_left = 156.0
margin_right = 308.0
margin_bottom = 84.0
size_flags_horizontal = 3
theme = SubResource( 8 )
text = "Default"

[node name="Cancel" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/ShirtButtons"]
visible = false
margin_left = 208.0
margin_right = 308.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = SubResource( 10 )
text = "Cancel"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 964.0
margin_right = 308.0
margin_bottom = 1309.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -323.725
margin_top = 140.749
margin_right = -25.7246
margin_bottom = 190.749
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CyclePosesButton" type="Button" parent="MarginContainer2"]
margin_right = 298.0
margin_bottom = 50.0
theme = SubResource( 14 )
text = "Cycle poses"

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -325.139
margin_top = 246.158
margin_right = -27.1387
margin_bottom = 296.158
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back to menu button" type="Button" parent="MarginContainer3"]
margin_right = 298.0
margin_bottom = 49.0
theme = SubResource( 16 )
text = "Back"

[node name="CameraPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 2
anims/zoomIn = SubResource( 17 )
anims/zoomOut = SubResource( 18 )
[connection signal="popup_closed" from="MarginContainer/PanelContainer/VBoxContainer/Helmet&Vest/HVColorPickerButton" to="." method="_on_HVColorPickerButton_popup_closed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/Helmet&Vest/HVColorPickerButton" to="." method="_on_HVColorPickerButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/H&VButtons/H&V Save" to="." method="_on_HV_Save_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/H&VButtons/H&V Default" to="." method="_on_HV_Default_pressed"]
[connection signal="popup_closed" from="MarginContainer/PanelContainer/VBoxContainer/Plating and armor/PAColorPickerButton" to="." method="_on_PAColorPickerButton_popup_closed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/Plating and armor/PAColorPickerButton" to="." method="_on_PAColorPickerButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/PaButtons/PA Save" to="." method="_on_PA_Save_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/PaButtons/PA Default" to="." method="_on_PA_Default_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/PaButtons/PA Cancel" to="." method="_on_PA_Cancel_pressed"]
[connection signal="popup_closed" from="MarginContainer/PanelContainer/VBoxContainer/Shirt/ShirtColorPickerButton" to="." method="_on_ShirtColorPickerButton_popup_closed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/Shirt/ShirtColorPickerButton" to="." method="_on_ShirtColorPickerButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ShirtButtons/Save" to="." method="_on_Shirt_Save_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ShirtButtons/Default" to="." method="_on_Shirt_Default_pressed"]
[connection signal="pressed" from="MarginContainer2/CyclePosesButton" to="." method="_on_CyclePosesButton_pressed"]
[connection signal="pressed" from="MarginContainer3/Back to menu button" to="." method="_on_Back_to_menu_button_pressed"]

[editable path="player_model_root"]

[editable path="player_model_root/player_model"]
